# pydoctor

./: .coveragerc  .gitignore  .travis.yml  CONTRIBUTING.rst  CONTRINUTING.rst  LICENSE.txt  MANIFEST.in  README.rst  README.txt  apilinks_sphinxext.py  basic.tac  compare.py  index.html  make.py  mypy.ini  nevow.cfg  pydoctor.css  pydoctor.ini  readthedocs.yml  server.tac  setup.cfg  setup.py  todo.txt  tox.ini  twisted.cfg  zibasic.tac
.github/: pull_request_template.md
.github/workflows/: main.yaml  primer.yaml  primer_comment.yaml  pydoctor.yaml  pydoctor.yml  pydoctor_primer.yaml  pydoctor_primer_comment.yaml  pypi.yaml  rst-quick-ref.yaml  sphinx-docs.yml  static.yaml  system.yaml  unit.yaml
doc/: design-notes.txt  extreme-pickling-pain.txt  fieldlist.txt  todo.txt
docextractor/: analysis.py  apidocs.css  ast_pp.py  driver.py  html.py  model.py  twistedmodel.py
docextractor/test/: conftest.py  test_ast_pp.py  test_commandline.py  test_formatting.py  test_import_star_finder.py  test_packages.py  test_pickling.py  test_simple.py  test_twistedmodel.py
docextractor/test/localimporttest/: __init__.py  mod1.py
docs/: test.py
docs/epytext_demo/: __init__.py  constants.py  demo_epytext_module.py
docs/google_demo/: __init__.py
docs/numpy_demo/: __init__.py
docs/restructuredtext_demo/: __init__.py  constants.py  demo_restructuredtext_module.py
docs/sample_template/: extra.css  header.html  test-search-query.html
docs/source/: codedoc.rst  conf.py  contrib.rst  customize.rst  dev.rst  docformat.rst  faq.rst  help.rst  help.txt  index.rst  json-spec.md  markup.rst  publish-github-action.rst  quickstart.rst  readme.rst  rst.py  rst.rst  rst_quick_ref.rst  rst_ref_unsupported.rst  rst_useless_directives.rst  spelling_wordlist.txt  sphinx-integration.rst  transition.rst  usage.rst
docs/source/api/: index.rst
docs/source/api-epydoc-demo/: index.rst
docs/source/api-rst-demo/: index.rst
docs/source/custom_template_demo/: index.rst  pyproject.toml
docs/source/docformat/: epytext.rst  google-numpy.rst  index.rst  list-restructuredtext-support.rst  restructuredtext.rst
docs/source/rtd_theme_api/: index.rst
docs/tests/: __init__.py  test-search.html  test-search.xhtml  test.py  test_python_igraph_docs.py  test_standard_library_docs.py  test_twisted_docs.py
pydoctor/: __init__.py  __main__.py  _compare.py  _configparser.py  _version.py  ast_pp.py  astbuilder.py  astutils.py  compat.py  deprecate.py  driver.py  epydoc2stan.py  factory.py  html.py  imodel.py  iwriter.py  jsonbuilder.py  linker.py  liveobjectchecker.py  lowerastbuilder.py  model.py  mro.py  names.py  nevowhtml.py  node2stan.py  options.py  pypi.py  qnmatch.py  server.py  sphinx.py  stanutils.py  symbols.py  twisted.py  twistedmodel.py  util.py  utils.py  visitor.py  zopeinterface.py
pydoctor/docspec/: __init__.py  __main__.py
pydoctor/epydoc/: __init__.py  apidoc.py  checker.py  cli.py  compat.py  docbuilder.py  docintrospecter.py  docparser.py  docstringparser.py  doctest.py  docutils.py  gui.py  log.py  sre_constants36.py  sre_parse36.py  util.py
pydoctor/epydoc/docwriter/: __init__.py  dotgraph.py  html.py  html_colorize.py  html_css.py  html_help.py  latex.py  latex_sty.py  plaintext.py  xlink.py
pydoctor/epydoc/markup/: __init__.py  _napoleon.py  _pyval_repr.py  _types.py  doctest.py  epytext.py  google.py  googlestyle.py  javadoc.py  numpy.py  numpystyle.py  plaintext.py  pyval_repr.py  restructuredtext.py
pydoctor/epydoc/test/: __init__.py  apidoc.doctest  epytext.doctest  javadoc.doctest  plaintext.doctest  pyval_repr.doctest  restructuredtext.doctest  test_epytext2html.py
pydoctor/extensions/: __init__.py  _dataclass_like.py  _inference.py  attrs.py  deprecate.py  twisted_deprecated.py  zope_interface.py  zopeinterface.py
pydoctor/napoleon/: __init__.py  docstring.py  iterators.py
pydoctor/nevowhtml/: __init__.py  pages.py  summary.py  util.py  writer.py
pydoctor/nevowhtml/pages/: __init__.py  attributechild.py  functionchild.py  table.py
pydoctor/sphinx_ext/: __init__.py  _help_output.py  api_output.py  build_apidocs.py  help_output.py
pydoctor/templates/: all-documents.html  apidocs.css  attribute-child.html  bigDiff.html  common.html  diff.html  edit.html  function-child.html  head.html  index.html  lunr.min.js  meta.html  nameIndex.html  nav.html  options.html  problemObjects.html  pydoctor.js  search-results.html  search-worker.js  search.js  sidebar-list.html  sidebar-table.html  sidebar.html  summary.html  table.html
pydoctor/templatewriter/: __init__.py  search.py  summary.py  util.py  writer.py
pydoctor/templatewriter/pages/: __init__.py  attributechild.py  functionchild.py  sidebar.py  table.py
pydoctor/test/: __init__.py  conftest.py  test_ast_pp.py  test_astbuilder.py  test_astutils.py  test_attrs.py  test_colorize.py  test_commandline.py  test_configparser.py  test_cyclic_imports_base_classes.py  test_epydoc2stan.py  test_formatting.py  test_import_finder.py  test_import_star_finder.py  test_inference.py  test_jsonbuilder.py  test_liveobjectchecker.py  test_model.py  test_mro.py  test_napoleon_docstring.py  test_napoleon_iterators.py  test_nevowhtml.py  test_node2stan.py  test_options.py  test_packages.py  test_pickling.py  test_pydantic_fields.py  test_pypi.py  test_qnmatch.py  test_server.py  test_simple.py  test_sphinx.py  test_symbols.py  test_templatewriter.py  test_twisted_python_deprecate.py  test_twistedmodel.py  test_type_fields.py  test_util.py  test_utils.py  test_visitor.py  (+1 more)
pydoctor/test/basic/: __init__.py  mod.py
pydoctor/test/codeininit/: __init__.py
pydoctor/test/docspec/: test_docspec.py
pydoctor/test/epydoc/: __init__.py  epytext.doctest  restructuredtext.doctest  restructuredtext2.doctest  test_epytext.py  test_epytext2html.py  test_epytext2node.py  test_google.py  test_google_numpy.py  test_googlestyle.py  test_napoleon.py  test_napoleon_get_parser.py  test_parsed_docstrings.py  test_pyval_repr.py  test_restructuredtext.py  (+1 more)
pydoctor/themes/: __init__.py
www/: conftest.py  index.html  pydoctor.css  usage.html
(+114 files in other folders)
