[metadata]
name = pydoctor
version = 21.9.2.dev0
author = Michael Hudson-Doyle
author_email = micahel@gmail.com
maintainer = Maarten ter Huurne
maintainer_email = maarten@boxingbeetle.com
description = API doc generator.
long_description_content_type = text/x-rst
license = MIT/X11
url = https://github.com/twisted/pydoctor
project_urls =
    Issue Tracker=https://github.com/twisted/pydoctor/issues
    Repository=https://github.com/twisted/pydoctor
    Documentation=https://pydoctor.readthedocs.io/
classifiers =
    Development Status :: 6 - Mature
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Documentation
    Topic :: Software Development :: Documentation

[options]
packages = find:
python_requires = >=3.6
install_requires =
    appdirs
    CacheControl[filecache]
    Twisted
    requests
    astor
    attrs
    docutils
    sre_parse36
    typing_extensions; python_version < "3.8"
    importlib_metadata; python_version < "3.8"
    importlib_resources; python_version < "3.9"

[options.extras_require]
docs =
    Sphinx
    sphinx_rtd_theme
    sphinxcontrib-spelling

rst =
    docutils

[options.entry_points]
console_scripts =
    pydoctor = pydoctor.driver:main

[options.package_data]
pydoctor =
    themes/base/*
    themes/classic/*

[install]
optimize = 1

[bdist_rpm]
release = 1
doc_files = README.txt

[tool:pytest]
testpaths = pydoctor/test
python_files = test_*.py
addopts = --doctest-glob='*.doctest' --strict-config --strict-markers
doctest_optionflags = ELLIPSIS IGNORE_EXCEPTION_DETAIL
xfail_strict = true
filterwarnings =
    error
    
    ; Sphinx imports distutils, this warning gets trigerred only in the test. See https://github.com/sphinx-doc/sphinx/issues/9820
    ignore:The distutils package is deprecated and slated for removal in Python 3.12\. Use setuptools or check PEP 632 for potential alternatives:DeprecationWarning:

[upload]
sign = True
