[metadata]
name = pydoctor
version = 22.5.1.dev0
author = Michael Hudson-Doyle
author_email = micahel@gmail.com
maintainer = Maarten ter Huurne
maintainer_email = maarten@boxingbeetle.com
description = API doc generator.
long_description_content_type = text/x-rst
license = MIT/X11
url = https://github.com/twisted/pydoctor
project_urls =
    Issue Tracker=https://github.com/twisted/pydoctor/issues
    Repository=https://github.com/twisted/pydoctor
    Documentation=https://pydoctor.readthedocs.io/
classifiers =
    Development Status :: 6 - Mature
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Documentation
    Topic :: Software Development :: Documentation

[options]
packages = find:
python_requires = >=3.6
install_requires =
    ; New requirements are OK but since pydotor is published as a debian package, 
    ; we should mak sure requirements already exists in repository https://tracker.debian.org/.
    appdirs
    CacheControl[filecache]
    Twisted
    requests
    astor
    attrs
    docutils>=0.17
    lunr==0.6.2
    configargparse
    toml
    importlib_metadata; python_version < "3.8"
    importlib_resources; python_version < "3.9"

[options.extras_require]
docs =
    Sphinx
    sphinx_rtd_theme
    sphinxcontrib-spelling
    sphinx-argparse

# legacy, do not use 
rst =
    docutils

test = 
    docutils>=0.18.1
    coverage
    pytest
    hypothesis
    cython-test-exception-raiser==1.0.0
    bs4
    Sphinx>=3.5

[options.entry_points]
console_scripts =
    pydoctor = pydoctor.driver:main

[options.package_data]
pydoctor =
    themes/base/*
    themes/base/fonts/*
    themes/classic/*
    themes/readthedocs/*
    themes/readthedocs/fonts/*

[install]
optimize = 1

[bdist_rpm]
release = 1
doc_files = README.txt

[tool:pytest]
testpaths = pydoctor/test
python_files = test_*.py
addopts = --doctest-glob='*.doctest' --strict-config --strict-markers
doctest_optionflags = ELLIPSIS IGNORE_EXCEPTION_DETAIL
xfail_strict = true
filterwarnings =
    error
    
    ; Sphinx imports distutils, this warning gets trigerred only in the test. See https://github.com/sphinx-doc/sphinx/issues/9820
    ignore:The distutils package is deprecated and slated for removal in Python 3.12\. Use setuptools or check PEP 632 for potential alternatives:DeprecationWarning:

[tool:pydoctor]
intersphinx = 
    https://docs.python.org/3/objects.inv
    ; FIXME: use the official Twisted's docs when they update
    https://tristanlatr.github.io/apidocs/twisted/objects.inv
    https://urllib3.readthedocs.io/en/latest/objects.inv
    https://requests.readthedocs.io/en/latest/objects.inv
    https://www.attrs.org/en/stable/objects.inv
    https://tristanlatr.github.io/apidocs/docutils/objects.inv
    https://www.sphinx-doc.org/en/stable/objects.inv 
    https://bw2.github.io/ConfigArgParse/objects.inv
    https://zopeschema.readthedocs.io/en/latest/objects.inv
    https://zopeinterface.readthedocs.io/en/latest/objects.inv

[upload]
sign = True
